--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainActivity">
-
 
     <TextView
         android:id="@+id/tv_system_app"
@@ -24,6 +22,8 @@
         android:id="@+id/tv_other_app"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/tv_system_app"
         android:layout_marginTop="12dp"
         android:background="@android:color/white"
         android:elevation="1dp"
@@ -33,5 +33,4 @@
         android:textSize="16sp"
         tools:targetApi="lollipop" />
 
-
-</LinearLayout>
+</RelativeLayout>
